# order-book-engine

./: .gitignore  CMakeLists.txt
include/: Order.h  OrderBook.h  Types.h
src/: Order.cpp  OrderBook.cpp  check1_classes.cpp  check2_pointers.cpp  check3_stl.cpp  main_check4.cpp
tests/: test_framework.h  test_orderbook.cpp
